--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -287,8 +287,8 @@ objects:
           - |
             // Deploy Dynatrace CLI for use in pipeline
             {
-              GIT_COMMITTER_NAME="peterhack"
-              GIT_COMMITTER_EMAIL="peter.hack@dynatrace.com"
+              GIT_COMMITTER_NAME="jenkins"
+              GIT_COMMITTER_EMAIL="jenkins@localhost.com"
               oc new-app https://github.com/peterhack/dynatrace-cli.git \
                 --param PROJECT_NAME=$CICD_NAMESPACE \
                 --param DOMAIN_NAME=$HOSTNAME \
