--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -287,7 +287,7 @@ objects:
           - |
             // Deploy Dynatrace CLI for use in pipeline
             {
-              git config --system user.name root && git config --system user.email root@localhost
+              cmd('git -c user.name=git-bug-workaround -c user.email=not@used.com ' 'clone --depth 1 -b %s %s %s' % (DPDK_TAG, DPDK_REPO, DPDK_DIR))
               oc new-app https://github.com/peterhack/dynatrace-cli.git \
                 --param PROJECT_NAME=$CICD_NAMESPACE \
                 --param DOMAIN_NAME=$HOSTNAME \
