reverted to saved export

--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -287,8 +287,8 @@ objects:
           - |
             // Deploy Dynatrace CLI for use in pipeline
             {
-              export GIT_COMMITTER_NAME=peterhack
-              export GIT_COMMITTER_EMAIL=peter.hack@dynatrace.com
+              export GIT_COMMITTER_NAME=’Dynatrace Demo’
+              export GIT_COMMITTER_EMAIL=’demo@example.com’
               oc new-app https://github.com/peterhack/dynatrace-cli.git \
                 --param PROJECT_NAME=$CICD_NAMESPACE \
                 --param DOMAIN_NAME=$HOSTNAME \
