added --allow-missing-imagestream-tags to build step

--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -122,7 +122,7 @@ objects:
                   script {
                     openshift.withCluster() {
                       openshift.withProject(env.DEV_PROJECT) {
-                        openshift.newBuild("--name=tasks", "--image-stream=jboss-eap70-openshift:1.5", "--binary=true")
+                        openshift.newBuild("--name=tasks", "--image-stream=jboss-eap70-openshift:1.5", "--binary=true", "--allow-missing-imagestream-tags")
                       }
                     }
                   }
